bin_PROGRAMS = ymap-example ytree-example ytrie-example yalloc-example ylist-example \
    yarray-example ytrie2-example ynode-example ydb-example yipc-example \
    ydb-hook-example ydb-write-example ylog-example \
    ydb-whisper-example ydb-select-example ydb-example1

ylog_example_SOURCES = ylog-example.c
ylog_example_CPPFLAGS = -I $(top_srcdir)/ydb
ylog_example_LDFLAGS = -L$(top_srcdir)/ydb/.libs \
                  -lydb -lyaml -lm
ylog_example_CFLAGS = -g -Wall

ymap_example_SOURCES = ymap-example.c
ymap_example_CPPFLAGS = -I $(top_srcdir)/ydb
ymap_example_LDFLAGS = -L$(top_srcdir)/ydb/.libs \
                  -lydb -lyaml -lm
ymap_example_CFLAGS = -g -Wall

ytree_example_SOURCES = ytree-example.c
ytree_example_CPPFLAGS = -I $(top_srcdir)/ydb
ytree_example_LDFLAGS = -L$(top_srcdir)/ydb/.libs \
                  -lydb -lyaml -lm
ytree_example_CFLAGS = -g -Wall

ylist_example_SOURCES = ylist-example.c
ylist_example_CPPFLAGS = -I $(top_srcdir)/ydb
ylist_example_LDFLAGS = -L$(top_srcdir)/ydb/.libs \
    -lydb -lyaml
ylist_example_CFLAGS = -g -Wall

yarray_example_SOURCES = yarray-example.c
yarray_example_CPPFLAGS = -I $(top_srcdir)/ydb
yarray_example_LDFLAGS = -L$(top_srcdir)/ydb/.libs \
    -lydb -lyaml
yarray_example_CFLAGS = -g -Wall

ytrie_example_SOURCES = ytrie-example.c
ytrie_example_CPPFLAGS = -I $(top_srcdir)/ydb
ytrie_example_LDFLAGS = -L$(top_srcdir)/ydb/.libs \
    -lydb -lyaml
ytrie_example_CFLAGS = -g -Wall

yalloc_example_SOURCES = yalloc-example.c
yalloc_example_CPPFLAGS = -I $(top_srcdir)/ydb
yalloc_example_LDFLAGS = -L$(top_srcdir)/ydb/.libs \
                  -lydb -lyaml
yalloc_example_CFLAGS = -g -Wall

ytrie2_example_SOURCES = ytrie2-example.c
ytrie2_example_CPPFLAGS = -I $(top_srcdir)/ydb
ytrie2_example_LDFLAGS = -L$(top_srcdir)/ydb/.libs \
    -lydb -lyaml
ytrie2_example_CFLAGS = -g -Wall

ynode_example_SOURCES = ynode-example.c
ynode_example_CPPFLAGS = -I $(top_srcdir)/ydb
ynode_example_LDFLAGS = -L$(top_srcdir)/ydb/.libs \
    -lydb -lyaml
ynode_example_CFLAGS = -g -Wall

ydb_example_SOURCES = ydb-example.c
ydb_example_CPPFLAGS = -I $(top_srcdir)/ydb
ydb_example_LDFLAGS = -L$(top_srcdir)/ydb/.libs \
    -lydb -lyaml
ydb_example_CFLAGS = -g -Wall

ydb_example1_SOURCES = ydb-example1.c
ydb_example1_CPPFLAGS = -I $(top_srcdir)/ydb
ydb_example1_LDFLAGS = -L$(top_srcdir)/ydb/.libs \
    -lydb -lyaml
ydb_example1_CFLAGS = -g -Wall

ydb_hook_example_SOURCES = ydb-hook-example.c
ydb_hook_example_CPPFLAGS = -I $(top_srcdir)/ydb
ydb_hook_example_LDFLAGS = -L$(top_srcdir)/ydb/.libs \
                  -lydb -lyaml -lm
ydb_hook_example_CFLAGS = -g -Wall

ydb_write_example_SOURCES = ydb-write-example.c
ydb_write_example_CPPFLAGS = -I $(top_srcdir)/ydb
ydb_write_example_LDFLAGS = -L$(top_srcdir)/ydb/.libs \
                  -lydb -lyaml -lm
ydb_write_example_CFLAGS = -g -Wall

ydb_whisper_example_SOURCES = ydb-whisper-example.c
ydb_whisper_example_CPPFLAGS = -I $(top_srcdir)/ydb
ydb_whisper_example_LDFLAGS = -L$(top_srcdir)/ydb/.libs \
                  -lydb -lyaml -lm
ydb_whisper_example_CFLAGS = -g -Wall

ydb_select_example_SOURCES = ydb-select-example.c
ydb_select_example_CPPFLAGS = -I $(top_srcdir)/ydb
ydb_select_example_LDFLAGS = -L$(top_srcdir)/ydb/.libs \
                  -lydb -lyaml -lm
ydb_select_example_CFLAGS = -g -Wall

yipc_example_SOURCES = yipc-example.c
yipc_example_CPPFLAGS = -I $(top_srcdir)/ydb
yipc_example_LDFLAGS = -L$(top_srcdir)/ydb/.libs \
    -lydb -lyaml
yipc_example_CFLAGS = -g -Wall

# dist_pkgdata_DATA = ytrie-input.txt