bin_PROGRAMS = ymap-example ytree-example ytrie-example ystr-example ylist-example \
    yarray-example ytrie2-example ynode-example yipc-example \
    ydb-hook-example ydb-write-example ylog-example \
    ydb-whisper-example

ylog_example_SOURCES = ylog-example.c
ylog_example_CPPFLAGS = -I $(top_srcdir)/ydb
ylog_example_LDFLAGS = -L$(top_srcdir)/ydb/.libs -lydb -lyaml -lm
ylog_example_CFLAGS = -g -Wall

ymap_example_SOURCES = ymap-example.c
ymap_example_CPPFLAGS = -I $(top_srcdir)/ydb
ymap_example_LDFLAGS = -L$(top_srcdir)/ydb/.libs -lydb -lyaml -lm
ymap_example_CFLAGS = -g -Wall

ytree_example_SOURCES = ytree-example.c
ytree_example_CPPFLAGS = -I $(top_srcdir)/ydb
ytree_example_LDFLAGS = -L$(top_srcdir)/ydb/.libs -lydb -lyaml -lm
ytree_example_CFLAGS = -g -Wall

ylist_example_SOURCES = ylist-example.c
ylist_example_CPPFLAGS = -I $(top_srcdir)/ydb
ylist_example_LDFLAGS = -L$(top_srcdir)/ydb/.libs -lydb -lyaml
ylist_example_CFLAGS = -g -Wall

yarray_example_SOURCES = yarray-example.c
yarray_example_CPPFLAGS = -I $(top_srcdir)/ydb
yarray_example_LDFLAGS = -L$(top_srcdir)/ydb/.libs -lydb -lyaml
yarray_example_CFLAGS = -g -Wall

ytrie_example_SOURCES = ytrie-example.c
ytrie_example_CPPFLAGS = -I $(top_srcdir)/ydb
ytrie_example_LDFLAGS = -L$(top_srcdir)/ydb/.libs -lydb -lyaml
ytrie_example_CFLAGS = -g -Wall

ystr_example_SOURCES = ystr-example.c
ystr_example_CPPFLAGS = -I $(top_srcdir)/ydb
ystr_example_LDFLAGS = -L$(top_srcdir)/ydb/.libs -lydb -lyaml
ystr_example_CFLAGS = -g -Wall

ytrie2_example_SOURCES = ytrie2-example.c
ytrie2_example_CPPFLAGS = -I $(top_srcdir)/ydb
ytrie2_example_LDFLAGS = -L$(top_srcdir)/ydb/.libs -lydb -lyaml
ytrie2_example_CFLAGS = -g -Wall

ynode_example_SOURCES = ynode-example.c
ynode_example_CPPFLAGS = -I $(top_srcdir)/ydb
ynode_example_LDFLAGS = -L$(top_srcdir)/ydb/.libs -lydb -lyaml
ynode_example_CFLAGS = -g -Wall

ydb_example1_SOURCES = ydb-example1.c
ydb_example1_CPPFLAGS = -I $(top_srcdir)/ydb
ydb_example1_LDFLAGS = -L$(top_srcdir)/ydb/.libs -lydb -lyaml
ydb_example1_CFLAGS = -g -Wall
bin_PROGRAMS += ydb-example1

ydb_example2_SOURCES = ydb-example2.c
ydb_example2_CPPFLAGS = -I $(top_srcdir)/ydb
ydb_example2_LDFLAGS = -L$(top_srcdir)/ydb/.libs -lydb -lyaml
ydb_example2_CFLAGS = -g -Wall
bin_PROGRAMS += ydb-example2

ydb_example3_SOURCES = ydb-example3.c
ydb_example3_CPPFLAGS = -I $(top_srcdir)/ydb
ydb_example3_LDFLAGS = -L$(top_srcdir)/ydb/.libs -lydb -lyaml
ydb_example3_CFLAGS = -g -Wall
bin_PROGRAMS += ydb-example3

ydb_hook_example_SOURCES = ydb-hook-example.c
ydb_hook_example_CPPFLAGS = -I $(top_srcdir)/ydb
ydb_hook_example_LDFLAGS = -L$(top_srcdir)/ydb/.libs -lydb -lyaml -lm
ydb_hook_example_CFLAGS = -g -Wall

ydb_write_example_SOURCES = ydb-write-example.c
ydb_write_example_CPPFLAGS = -I $(top_srcdir)/ydb
ydb_write_example_LDFLAGS = -L$(top_srcdir)/ydb/.libs -lydb -lyaml -lm
ydb_write_example_CFLAGS = -g -Wall

ydb_whisper_example_SOURCES = ydb-whisper-example.c
ydb_whisper_example_CPPFLAGS = -I $(top_srcdir)/ydb
ydb_whisper_example_LDFLAGS = -L$(top_srcdir)/ydb/.libs -lydb -lyaml -lm
ydb_whisper_example_CFLAGS = -g -Wall

bin_PROGRAMS += ydb-ipc-select
ydb_ipc_select_SOURCES = ydb-ipc-select.c
ydb_ipc_select_CPPFLAGS = -I $(top_srcdir)/ydb
ydb_ipc_select_LDFLAGS = -L$(top_srcdir)/ydb/.libs -lydb -lyaml -lm
ydb_ipc_select_CFLAGS = -g -Wall

yipc_example_SOURCES = yipc-example.c
yipc_example_CPPFLAGS = -I $(top_srcdir)/ydb
yipc_example_LDFLAGS = -L$(top_srcdir)/ydb/.libs -lydb -lyaml
yipc_example_CFLAGS = -g -Wall

bin_PROGRAMS += ydb-ex-path
ydb_ex_path_SOURCES = ydb-ex-path.c
ydb_ex_path_CPPFLAGS = -I $(top_srcdir)/ydb
ydb_ex_path_LDFLAGS = -L$(top_srcdir)/ydb/.libs -lydb -lyaml
ydb_ex_path_CFLAGS = -g -Wall

bin_PROGRAMS += ydb-ex-seq
ydb_ex_seq_SOURCES = ydb-ex-seq.c
ydb_ex_seq_CPPFLAGS = -I $(top_srcdir)/ydb
ydb_ex_seq_LDFLAGS = -L$(top_srcdir)/ydb/.libs -lydb -lyaml
ydb_ex_seq_CFLAGS = -g -Wall

bin_PROGRAMS += ydb-ex-map
ydb_ex_map_SOURCES = ydb-ex-map.c
ydb_ex_map_CPPFLAGS = -I $(top_srcdir)/ydb
ydb_ex_map_LDFLAGS = -L$(top_srcdir)/ydb/.libs -lydb -lyaml
ydb_ex_map_CFLAGS = -g -Wall

bin_PROGRAMS += ydb-ipc-pub
ydb_ipc_pub_SOURCES = ydb-ipc-pub.c
ydb_ipc_pub_CPPFLAGS = -I $(top_srcdir)/ydb
ydb_ipc_pub_LDFLAGS = -L$(top_srcdir)/ydb/.libs -lydb -lyaml -lm
ydb_ipc_pub_CFLAGS = -g -Wall

bin_PROGRAMS += ydb-ipc-sub
ydb_ipc_sub_SOURCES = ydb-ipc-sub.c
ydb_ipc_sub_CPPFLAGS = -I $(top_srcdir)/ydb
ydb_ipc_sub_LDFLAGS = -L$(top_srcdir)/ydb/.libs -lydb -lyaml -lm
ydb_ipc_sub_CFLAGS = -g -Wall

bin_PROGRAMS += ydb-ipc-write-hook
ydb_ipc_write_hook_SOURCES = ydb-ipc-write-hook.c
ydb_ipc_write_hook_CPPFLAGS = -I $(top_srcdir)/ydb
ydb_ipc_write_hook_LDFLAGS = -L$(top_srcdir)/ydb/.libs -lydb -lyaml -lm
ydb_ipc_write_hook_CFLAGS = -g -Wall

bin_PROGRAMS += ydb-ipc-read-hook
ydb_ipc_read_hook_SOURCES = ydb-ipc-read-hook.c
ydb_ipc_read_hook_CPPFLAGS = -I $(top_srcdir)/ydb
ydb_ipc_read_hook_LDFLAGS = -L$(top_srcdir)/ydb/.libs -lydb -lyaml -lm
ydb_ipc_read_hook_CFLAGS = -g -Wall

bin_PROGRAMS += ydb-base64
ydb_base64_SOURCES = ydb-base64.c
ydb_base64_CPPFLAGS = -I $(top_srcdir)/ydb
ydb_base64_LDFLAGS = -L$(top_srcdir)/ydb/.libs -lydb -lyaml -lm
ydb_base64_CFLAGS = -g -Wall

# dist_pkgdata_DATA = ytrie-input.txt